--- a/pom.xml
+++ b/pom.xml
@@ -37,15 +37,16 @@
 			<artifactId>drools-decisiontables</artifactId>
 			<version>${drools.version}</version>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
 			<version>${drools.version}</version>
 		</dependency>
-		
-		
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
